fixed wrap

--- a/trombonestyle.css
+++ b/trombonestyle.css
@@ -8,6 +8,7 @@ body {
 #header {
 	display: flex;
 	flex-direction: row;
+	flex-wrap:wrap;
 	justify-content: space-between;
 	align-items: center;
 	background-color: yellow;
@@ -22,7 +23,9 @@ li {
 }
 
 #nav-bar {
+	display:flex;
 	flex-direction: row;
+	flex-wrap: wrap
 }
 
 .nav-link {
@@ -38,22 +41,14 @@ a {
 	background-color: yellow;
 	display: flex;
 	flex-direction:column;
-	justify-content: space-between;
+	justify-content: center;
+	flex-wrap:wrap;
 	align-items:center;
 	text-align: center;
 	margin-top: 10px;
 	
 }
 
-.wrapper{
-	display:flex;
-	flex-direction:row;
-}
-
-.wrapper input[type="email"]{
-	justify-content:flex-end;
-	flex: 1 1 360px;
-}
 
 
 input[type="email"] {
@@ -65,20 +60,12 @@ input[type="email"] {
 input[type="submit"] {
 	width: 150px;
 	border: 0;
+	margin-top:10px;
+	padding: 5px;
 	font-size:20px;
 	background-color: #f1c40f;
 	
-	@media(max-width: 700px){
-		margin-top: 20px;
-	}
-}
-.container{
-	width: 100%;
-	margin: 10px 50px 5px;
-	background-color: yellow;
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
+	
 }
 
 .container-items{
@@ -93,7 +80,6 @@ input[type="submit"] {
 }
 
 iframe {
-	@media (max-width:600px){
-		max-width: 400px;
-	}
+	max-width: 560px;
+	width:100%;
 }
